[tool.poetry]
name = "awscertfdevprep"
version = "0.1.0"
description = ""
authors = ["Cristian Mello <cristianc.mello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"
boto3 = "^1.34.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
